--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,70 @@ footer {
 	font-size: 12px;
   }
 }
+
+#review-btn {
+	background-color: rgb(255, 215, 215);
+	outline: none;
+	border: none;
+	padding: 10px;
+	border-radius: 5px;
+	font-family: 'Poppins', sans-serif;
+}
+
+#review-btn1 {
+	background-color: rgb(255, 215, 215);
+	outline: none;
+	border: none;
+	padding: 10px;
+	border-radius: 5px;
+	font-family: 'Poppins', sans-serif;
+}
+
+#review-btn2 {
+	background-color: rgb(255, 215, 215);
+	outline: none;
+	border: none;
+	padding: 10px;
+	border-radius: 5px;
+	font-family: 'Poppins', sans-serif;
+}
+
+#review-btn:hover {
+	animation: go 1s
+}
+
+#review-btn1:hover {
+	animation: go1 1s
+}
+
+#review-btn2:hover {
+	animation: go2 1s
+}
+
+@keyframes go {
+	from {
+		background-color: rgb(255, 215, 215);
+	}
+	to {
+		background-color: rgb(0, 255, 0);
+	}
+}
+
+@keyframes go1 {
+	from {
+		background-color: rgb(255, 215, 215);
+	}
+	to {
+		background-color: #ffd84d;
+	}
+}
+
+@keyframes go2 {
+	from {
+		background-color: rgb(255, 215, 215);
+	}
+	to {
+		background-color: rgb(255, 0, 0);
+		color: white;
+	}
+}
