--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ section p {
 	text-align: center;
 	color: rgb(100, 120, 140);
 }
-article {
+.one {
 	background: rgb(125, 155, 255);
 	float: left;
 	width: 31.3%;
@@ -38,6 +38,9 @@ ul {
 }
 article p {
 	text-align: center;
+	font-size: 14px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 section h2 {
 	text-align: center;
@@ -87,6 +90,15 @@ footer {
 	font-family: 'Poppins', sans-serif;
    cursor: url(https://cdn.custom-cursor.com/db/pointer/32/Blue_pointer.png) , pointer!important;
 
+}
+
+.two {
+	background-color: rgb(120, 23, 122);
+	float: left;
+	width: 100%;
+	height: 210px;
+	text-align: center;
+color: white;
 }
 
 #review-btn2 {
